; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_image_png.c_PngErrorFunc.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_image_png.c_PngErrorFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HPDF_LIBPNG_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @PngErrorFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PngErrorFunc(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca [16 x i8], align 16
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %9 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %10 = call i32 @HPDF_MemSet(i8* %9, i32 0, i32 16)
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %33, %2
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 15
  br i1 %13, label %14, label %36

14:                                               ; preds = %11
  %15 = load i8*, i8** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i8, i8* %15, i64 %17
  %19 = load i8, i8* %18, align 1
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 %21
  store i8 %19, i8* %22, align 1
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  %27 = getelementptr inbounds i8, i8* %26, i64 1
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 32
  br i1 %30, label %31, label %32

31:                                               ; preds = %14
  br label %36

32:                                               ; preds = %14
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %11

36:                                               ; preds = %31, %11
  %37 = load i32, i32* %3, align 4
  %38 = call i64 @png_get_error_ptr(i32 %37)
  store i64 %38, i64* %8, align 8
  %39 = getelementptr inbounds [16 x i8], [16 x i8]* %5, i64 0, i64 0
  %40 = call i64 @HPDF_AToI(i8* %39)
  store i64 %40, i64* %7, align 8
  %41 = load i64, i64* %8, align 8
  %42 = load i32, i32* @HPDF_LIBPNG_ERROR, align 4
  %43 = load i64, i64* %7, align 8
  %44 = call i32 @HPDF_SetError(i64 %41, i32 %42, i64 %43)
  ret void
}

declare dso_local i32 @HPDF_MemSet(i8*, i32, i32) #1

declare dso_local i64 @png_get_error_ptr(i32) #1

declare dso_local i64 @HPDF_AToI(i8*) #1

declare dso_local i32 @HPDF_SetError(i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
